--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@
 
 DATABASE_URL="mysql://root:@localhost:3306/newsapp"
 
+HOST="http://localhost:3000"
 JWT_SECRET="123-XYZ-ABC"
 JWT_ISSUER="Localhost"
 JWT_EXPIRATION_TIME="24h"
